--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ body {
     width: 100px;
     height: 100px;
     background-color: red; /* Example color, can change based on position */
-    border: 1px solid #000;
+    border: 10px solid #000;
+    padding: 5px;
     transform: translateZ(0px); 
 }
 
