--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
     position: absolute;
     width: 100px;
     height: 100px;
-    background-color: red; /* Example color, can change based on position */
+    background-color: transparent; /* Example color, can change based on position */
     border: 10px solid #000;
     padding: 5px;
     transform: translateZ(0px); 
