--- a/style.css
+++ b/style.css
@@ -90,11 +90,12 @@ body {
 
 /* Mini-cube and its faces */
 .mini-cube {
-    position: relative;
+    position: absolute;
     width: 100px;
     height: 100px;
     transform-style: preserve-3d;
-    transition: all 0.1s ease-out;
+    transition: all 0.9s ease-out;
+    /* transform-origin: center center; */
 }
 
 /* Each face of the mini-cube */
@@ -105,7 +106,7 @@ body {
     background-color: transparent; /* Example color, can change based on position */
     border: 10px solid #000;
     padding: 5px;
-    transform: translateZ(0px); 
+    /* transform: translateZ(0px);  */
 }
 
 
