--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100vh;
-    background: url('assets/space.jpg') no-repeat center center fixed;
+    background: url('../assets/space.jpg') no-repeat center center fixed;
     background-size: cover;
     margin: 0;
 }
